src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__cte_final__non_included.snap
---
source: src/builder/tests/inserts/cte_final.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
SELECT
  "public"."peoples"."id" :: TEXT AS "id",
  $0 :: TEXT AS "type",
  NULL :: json AS "data"
FROM
  "public"."peoples";
