src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__cte_final__simple.snap
---
source: src/builder/tests/inserts/cte_final.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
SELECT
  "public"."peoples"."id" :: TEXT AS "id",
  "public"."peoples"."id" AS "main_id",
  $1 :: TEXT AS "type",
  JSON_BUILD_OBJECT(
    $2,
    "public"."peoples"."age",
    $3,
    "public"."peoples"."first-name",
    $4,
    "public"."peoples"."gender",
    $5,
    "public"."peoples"."last-name",
    $6,
    "public"."peoples"."twitter"
  ) AS "data",
  NULL :: TEXT AS "related_id",
  NULL :: TEXT AS "related_type"
FROM
  "public"."peoples";
