src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__cte_final__sparse.snap
---
source: src/builder/tests/inserts/cte_final.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
SELECT
  "public"."peoples"."id" :: TEXT AS "id",
  "public"."peoples"."id" AS "main_id",
  $1 :: TEXT AS "type",
  JSON_BUILD_OBJECT($2, "public"."peoples"."first-name") AS "data",
  NULL :: TEXT AS "related_id",
  NULL :: TEXT AS "related_type"
FROM
  "public"."peoples";
